fix: readability fixes. - Overlay: Added a 30% blackout overlay to the slider images. - Text: Increased the drop shadow intensity on your name ("BENJAMIN DOURTHE") to ensure it pops against any background.

--- a/css/style_modern.css
+++ b/css/style_modern.css
@@ -87,7 +87,7 @@ body.dark-mode {
 
 .titleMessage .heading {
     color: #fff;
-    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.8), 0px 0px 10px rgba(0, 0, 0, 0.5);
     font-weight: 100;
     letter-spacing: 7px;
 }
@@ -98,6 +98,16 @@ body.dark-mode {
 
 .titleMessage .sub {
     font-size: 23px;
+}
+
+#slides .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 2;
 }
 
 /* Theme Switch Toggle */
